# numberlab

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: numberlab.yml  pages.yml
benches/: arithmetic.rs  factorial.rs  factorization.rs  fibonacci.rs  geometric.rs  hexagonal.rs  lazy_caterer.rs  lucas.rs  pentagonal.rs  recaman.rs  sieve.rs  square.rs  sylvester.rs  triangle.rs  triangular.rs  tribonacci.rs
examples/: algorithm_factorize.rs  algorithm_graph.rs  algorithm_graph_dijkstra.rs  algorithm_matrix.rs  algorithm_matrix_bfs_dfs.rs  arithmetic.rs  coordinate_cartesian.rs  coordinate_one_dimension.rs  coordinate_polar.rs  coordinate_two_dimension.rs  eratosthenes.rs  factorial.rs  fibonacci.rs  figurate_hexagonal.rs  figurate_lazy_caterer.rs  figurate_pentagonal.rs  figurate_square.rs  figurate_star.rs  figurate_stella_octangula.rs  figurate_triangular.rs  formula_combination.rs  formula_gcd.rs  formula_lcm.rs  formula_matrix.rs  formula_permutation.rs  geometric.rs  hexagonal.rs  lazy_carterer.rs  lucas.rs  pattern_pascal.rs  pentagonal.rs  prime_sieve.rs  prime_sieve_eratosthenes.rs  prime_sieve_sundaram.rs  recaman.rs  sequence_arithmetic.rs  sequence_factorial.rs  sequence_fibonacci.rs  sequence_figurate_hexagonal.rs  sequence_figurate_lazy_caterer.rs  (+16 more)
src/: algorithm.rs  coordinate.rs  formula.rs  lib.rs  macros.rs  one.rs  pattern.rs  prime.rs  sequence.rs  series.rs  structure.rs
src/algorithm/: factorize.rs  graph.rs  matrix.rs
src/coordinate/: c_point.rs  cartesian.rs  p_point.rs  polar.rs  traits.rs
src/figurate/: hexagonal.rs  lazy_caterer.rs  pentagonal.rs  square.rs  star.rs  (+2 more)
tests/: algorithm_factorize.rs  algorithm_graph_test.rs  arithmetic_test.rs  coordinate_cartesian.rs  coordinate_one_dimension.rs  coordinate_polar.rs  coordinate_polar_test.rs  coordinate_two_dimension.rs  fibonacci_tests.rs  figurate_hexagonal_test.rs  figurate_lazy_caterer_test.rs  figurate_pentagonal.rs  figurate_square.rs  figurate_star.rs  figurate_stella_octangula_test.rs  figurate_triangular_test.rs  formula.rs  formula_arithmetic_test.rs  formula_combination.rs  formula_matrix_test.rs  formula_permutation.rs  geometric_test.rs  hexagonal_tests.rs  lazy_caterer_tests.rs  lucas_tests.rs  pattern_pascal.rs  pentagonal_tests.rs  prime_sieve.rs  prime_sieve_eratosthenes.rs  prime_sieve_sundaram.rs  recaman_test.rs  sequence_arithmetic.rs  sequence_arithmetic_test.rs  sequence_factorial.rs  sequence_factorial_test.rs  sequence_fibonacci.rs  sequence_fibonacci_test.rs  sequence_figurate_hexagonal.rs  sequence_figurate_lazy_caterer.rs  sequence_figurate_pentagonal.rs  (+19 more)
(+94 files in other folders)
