[package]
name = "numberlab"
version = "0.1.0"
edition = "2021"
authors = ["indrajit"]
description = "A collection of number theory algorithms"
documentation = "https://docs.rs/numberlab"
readme = "README.md"
homepage = "https://eendroroy.github.io/numberlab"
repository = "https://github.com/eendroroy/numberlab"
license = "AGPL-3.0"
keywords = []
categories = ["algorithms"]

[lib]
name = "numberlab"
path = "src/lib.rs"
edition = "2021"
crate-type = ["staticlib", "lib", "cdylib"]

[dependencies]
num-bigint = "=0.4.6"

[dev-dependencies]
criterion = "=0.5.1"

[features]
html_reports = ["criterion/html_reports"]

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "square"
harness = false

[[bench]]
name = "triangular"
harness = false

[[bench]]
name = "pentagonal"
harness = false

[[bench]]
name = "hexagonal"
harness = false

[[bench]]
name = "lazy_caterer"
harness = false

[[bench]]
name = "factorial"
harness = false

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "lucas"
harness = false

[[bench]]
name = "sylvester"
harness = false

[[bench]]
name = "tribonacci"
harness = false

[[bench]]
name = "geometric"
harness = false

[[bench]]
name = "sieve"
harness = false

[[bench]]
name = "recaman"
harness = false
