[package]
name = "numberlab"
version = "0.1.1"
edition = "2021"
authors = ["indrajit"]
description = "A collection of numerical algorithms"
documentation = "https://docs.rs/numberlab"
readme = "README.md"
homepage = "https://eendroroy.github.io/numberlab"
repository = "https://github.com/eendroroy/numberlab"
license = "AGPL-3.0"
keywords = ["math", "algorithms"]
categories = ["algorithms"]
rust-version = "1.60.0"

[lib]
name = "numberlab"
path = "src/lib.rs"
edition = "2021"
#crate-type = ["staticlib", "lib", "cdylib"]

[dependencies]
num = "=0.4.3"
