[package]
name = "numberlab"
version = "0.1.8"
edition = "2021"
authors = ["indrajit"]
description = "A collection of numerical algorithms"
documentation = "https://docs.rs/numberlab"
readme = "README.md"
homepage = "https://eendroroy.github.io/numberlab"
repository = "https://github.com/eendroroy/numberlab"
license = "AGPL-3.0"
keywords = ["math", "algorithms"]
categories = ["algorithms"]
rust-version = "1.60.0"

[lib]
name = "numberlab"
path = "src/lib.rs"
edition = "2021"
crate-type = ["lib"]
#crate-type = ["staticlib", "lib", "cdylib"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "factorization"
harness = false

[[bench]]
name = "factorial"
harness = false